--- a/requirements.txt
+++ b/requirements.txt
@@ -73,6 +73,7 @@ pycairo==1.15.4
 pycrypto==2.6.1
 pycups==1.9.73
 pycurl==7.43.0
+pyflakes==1.6.0
 pygobject==3.26.1
 pyinotify==0.9.6
 PyOpenGL==3.1.0
